doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.4.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/richtextfx-fat-0.9.0.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/javassist-3.18.0.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/commons-vfs2-2.0.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/ty/mkzptmbd67bcs133gcy_0bwc0000gt/T/AppTranslocation/C25026D0-52AD-43E1-90AF-FC99B5637219/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/Users/1098232/Documents/GitHub/FlappyBird
-d
/Users/1098232/Documents/GitHub/FlappyBird/doc
-encoding
UTF-8
-charset
UTF-8
/Users/1098232/Documents/GitHub/FlappyBird/GameOver.java
<---- end of javadoc command ---->
Loading source file /Users/1098232/Documents/GitHub/FlappyBird/GameOver.java...
/Users/1098232/Documents/GitHub/FlappyBird/GameOver.java:18: error: illegal start of expression
        if(){
           ^
1 error
